@@ -45,6 +45,7 @@ enum XLE_PASSWORDSAFE {
   //   Integer & Boolean
   XLE_PREF_START,
   XLE_DISPLAYEXPANDEDADDEDITDLG = XLE_PREF_START,
+  XLE_LOCKDBONIDLETIMEOUT,
   XLE_IDLETIMEOUT,
   XLE_MAINTAINDATETIMESTAMPS,
   XLE_NUMPWHISTORYDEFAULT,
